[tool.poetry]
name = "jupyterhost"
version = "0.1.0"
description = "mak's dev horse"
authors = ["shibin mak <m.shibin96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
